--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@clr/ui": "4.0.5",
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "file-saver": "^2.0.5",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "subsink": "^1.0.1",
     "tslib": "^2.0.0",
